--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
     </div>
 
     <!-- Updated code with card layout -->
-    <div class="container">
+    <div class="mx-5 px-4">
         <div class="row">
             {% for comment in comments %}
                 <div class="col-md-4 mb-4">
