--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
             color: white;
         }
 
-        .primary-text{
+        .primary-text {
             color: #19217BFF;
         }
     </style>
@@ -23,7 +23,7 @@
 <body>
 <nav class="navbar navbar-expand-lg navcolor text-white">
     <div class="container">
-        <a class="navbar-brand text-white" href="#">Study Companion</a>
+        <a class="navbar-brand text-white" href="/">Study Companion</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -33,15 +33,35 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/">Home</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/about/">About Us</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/contact/">Contact</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/login/">Login</a>
-                </li>
+                {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="/assignments/">Assignments</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/group-study/">Group Study</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/reminders/">Reminders</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/admin/">{{ user.username }}</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/logout/">Logout</a>
+                    </li>
+                {% else %}
+                    <!-- Show "About Us" and "Contact" links for non-authenticated users -->
+                    <li class="nav-item">
+                        <a class="nav-link" href="/about/">About Us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/contact/">Contact</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="/login/">Login</a>
+                    </li>
+                {% endif %}
             </ul>
         </div>
     </div>
