--- a/templates/index.html
+++ b/templates/index.html
@@ -5,38 +5,70 @@
 {% endblock %}
 
 {% block content %}
-    <div class="text-center my-5">
-        <h1 class="primary-text"> Your ultimate all-in-one study companion! </h1>
-        <h2 class="text-warning"> Elevate your learning experience. </h2>
-    </div>
 
-    <!-- Updated code with card layout -->
-    <div class="mx-5 px-4">
-        <div class="row">
-            {% for comment in comments %}
-                <div class="col-md-4 mb-4">
-                    <div class="card">
-                        <div class="row g-0">
-                            <div class="col-md-4">
-                                <!-- Add the image here, or set a default image URL if available -->
-                                <img src="" class="img-fluid rounded-start"
-                                     alt="User Image">
+    {% if user.is_authenticated %}
+        <div class="text-center my-5">
+            <h1 class="primary-text"> Welcome back, {{ user.name }}! </h1>
+            <h2 class="text-warning"> Today you need to work on: </h2>
+        </div>
+
+        <div class="mx-5 px-4">
+            <div class="row">
+                {% for assignment in assignments %}
+                    <div class="col-md-4 mb-4">
+                        <div class="card border-danger">
+                            <h4 class="card-header bg-light text-danger">{{ assignment.name }}</h4>
+                            <div class="card-body">
+                                <h5 class="card-title">{{ assignment.course }}</h5>
+                                <p class="card-text">Due Date: {{ assignment.due_date }}</p>
+                                <p class="card-text">{{ assignment.description }}</p>
+                                {#<a href="#" class="btn btn-danger">Go somewhere</a>#}
                             </div>
-                            <div class="col-md-8">
-                                <div class="card-body">
-                                    <h5 class="card-title">{{ comment.user.first_name }}</h5>
-                                    <p class="card-text">{{ comment.description }}</p>
-                                    <p class="card-text">
-                                        {% for i in comment.stars %}
-                                            <i class="fas fa-star"></i>
-                                        {% endfor %}
-                                    </p>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
+        </div>
+    {% else %}
+
+
+
+        <div class="text-center my-5">
+            <h1 class="primary-text"> Your ultimate all-in-one study companion! </h1>
+            <h2 class="text-warning"> Elevate your learning experience. </h2>
+        </div>
+
+        <!-- Updated code with card layout -->
+        <div class="mx-5 px-4">
+            <div class="row">
+                {% for comment in comments %}
+                    <div class="col-md-4 mb-4">
+                        <div class="card">
+                            <div class="row g-0">
+                                <div class="col-md-4">
+                                    <!-- Add the image here, or set a default image URL if available -->
+                                    <img src="" class="img-fluid rounded-start"
+                                         alt="User Image">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">{{ comment.user.first_name }}</h5>
+                                        <p class="card-text">{{ comment.description }}</p>
+                                        <p class="card-text">
+                                            {% for i in comment.stars %}
+                                                <i class="fas fa-star"></i>
+                                            {% endfor %}
+                                        </p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
-            {% endfor %}
+                {% endfor %}
+            </div>
         </div>
-    </div>
+
+
+    {% endif %}
+
 {% endblock %}
