--- a/templates/assignment_details.html
+++ b/templates/assignment_details.html
@@ -7,7 +7,7 @@
 {% block content %}
 
     <div class="container">
-
+        <a href="{% url 'assignments' %}" class="btn btn-outline-secondary">Go Back</a>
         <div class="card border-info mb-3 mx-auto" style="max-width: 700px">
               <div class="card-header">
                     <h3 class="card-title text-info">{{ assignment.name }}</h3>
