--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,10 @@
                                 <h5 class="card-title">{{ assignment.course }}</h5>
                                 <p class="card-text">Due Date: {{ assignment.due_date }}</p>
                                 <p class="card-text">{{ assignment.description }}</p>
+{#                                <div class="text-right">#}
+{#                                    <a href="{% url 'assignment_details' name=assignment.name %}" class="btn btn-link">See more</a>#}
+{#                                </div>#}
+                                {# see more ako treba da se stavi #}
                                 {#<a href="#" class="btn btn-danger">Go somewhere</a>#}
                             </div>
                         </div>
