--- a/templates/add_reminder.html
+++ b/templates/add_reminder.html
@@ -7,27 +7,37 @@
 
 {% block content %}
     <div class="container mt-4">
-        <h1>Add Reminder</h1>
-        <form method="post">
-            {% csrf_token %}
-            <div class="mb-3">
-                <label class="form-label">Name</label>
-                {{ form.name }}
-            </div>
-            <div class="mb-3">
-                <label class="form-label">Description</label>
-                {{ form.description }}
-            </div>
-            <div class="mb-3">
-                <label class="form-label">Course</label>
-                {{ form.course }}
-            </div>
-            <div class="mb-3">
-                <label class="form-label">Deadline</label>
-                {{ form.deadline }}
-            </div>
-            <button type="submit" class="btn btn-primary">Save</button>
-        </form>
+    <a href="{% url 'reminders' %}" class="btn btn-outline-secondary">Go Back</a>
+        <div class="mx-auto" style="max-width: 600px">
+        <h1 class="text-center primary-text mb-5">Add Reminder</h1>
+            <form method="post">
+                {% csrf_token %}
+                <div class="mb-3">
+                    <label class="form-label">Name</label>
+                    {{ form.name }}
+                </div>
+                <div class="mb-3">
+                    <label class="form-label">Description</label>
+                    {{ form.description }}
+                </div>
+                <div class="mb-3">
+                    <label class="form-label">Course</label>
+                    {{ form.course }}
+                </div>
+                <div class="mb-3">
+                    <label class="form-label">Deadline</label>
+                    {{ form.deadline }}
+                </div>
+                <div class="row">
+                    <div class="col-md-6 text-left mt-2">
+                    <a href="{% url 'reminders' %}" class="btn btn-secondary">Cancel</a>
+                    </div>
+                    <div class="col-md-6 text-right">
+                        <button type="submit" class="btn btn-primary mt-2">Save</button>
+                    </div>
+                </div>
+            </form>
+        </div>
     </div>
 {% endblock %}
 
