--- a/templates/assignments.html
+++ b/templates/assignments.html
@@ -5,27 +5,63 @@
         <h1 class="primary-text"> My Assignments </h1>
     </div>
 
-    <!-- Updated code with card layout -->
-    <div class="mx-5 px-4">
-        <div class="row">
-            {% for assignment in assignments %}
-                <div class="col-md-4 mb-4">
-                    <div class="card navcolor-border">
-                        <h4 class="card-header navcolor text-white">{{ assignment.name }}</h4>
-                        <div class="card-body">
-                            <h5 class="card-title">{{ assignment.course }}</h5>
-                            <p class="card-text">Due Date: {{ assignment.due_date }}</p>
-                            <p class="card-text">{{ assignment.description }}</p>
-                            <div class="text-right">
-                                <a href="{% url 'assignment_details' name=assignment.name %}" class="btn btn-link">See more</a>
-                            </div>
-
-                        </div>
+<div class="mx-5 px-4">
+    <div class="row">
+        {% for assignment in assignments %}
+        <div class="col-md-4 mb-4">
+            <div class="card navcolor-border">
+                <h4 class="card-header navcolor text-white">{{ assignment.name }}</h4>
+                <div class="card-body">
+                    <h5 class="card-title">{{ assignment.course }}</h5>
+                    <p class="card-text">Due Date: {{ assignment.due_date }}</p>
+                    <p class="card-text">{{ assignment.description }}</p>
+                    <div class="progress">
+                        <div id="progressBar_{{ assignment.id }}" class="progress-bar progress-bar-striped" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <div class="text-right">
+                        <a href="{% url 'assignment_details' name=assignment.name %}" class="btn btn-link">See more</a>
                     </div>
                 </div>
-            {% endfor %}
+            </div>
         </div>
+
+        <script>
+            function updateProgressBar(progress, progressBarId) {
+                // Multiply the progress value by 10
+                var percentage = progress * 10;
+
+                // Set the width of the progress bar
+                var progressBar = document.getElementById(progressBarId);
+                progressBar.style.width = percentage + '%';
+
+                // Update the aria-valuenow attribute
+                progressBar.setAttribute('aria-valuenow', percentage);
+
+                // Add custom color class based on the progress value
+                if (percentage < 25) {
+                    progressBar.classList.add('bg-danger');
+                } else if (percentage < 50) {
+                    progressBar.classList.add('bg-warning');
+                } else if (percentage < 75) {
+                    progressBar.classList.add('bg-primary');
+                } else {
+                    progressBar.classList.add('bg-success');
+                }
+            }
+
+            // Example usage: Call the function with the progress value
+            var progressValue_{{ assignment.id }} = {{ assignment.progress }};
+            updateProgressBar(progressValue_{{ assignment.id }}, 'progressBar_{{ assignment.id }}');
+        </script>
+
+        {% endfor %}
     </div>
+</div>
+
+
+
+
+
 
 
     <a href="{% url 'add_assignment_task' %}" class="btn btn-primary mx-5 px-4">Add New Assignment</a>
