--- a/templates/assignment_details.html
+++ b/templates/assignment_details.html
@@ -18,8 +18,13 @@
                 <p class="card-text">Assignment progress: {{ assignment.progress }}</p>
                 <p class="card-text">Due date: {{ assignment.due_date }}</p>
                 <p class="card-text">Made by user: {{ assignment.user }}</p>
-                  <div class="text-right">
-                      <a href="{% url 'delete_assignment' name=assignment.name %}" class="btn btn-danger">Delete</a>
+                  <div class="d-flex mt-3">
+                      <div class="text-left">
+                          <a href="{% url 'delete_assignment' name=assignment.name %}" class="btn btn-danger">Delete</a>
+                      </div>
+                      <div class="text-right ml-auto">
+                          <a href="{% url 'edit_assignment' assignment.name %}" class="btn btn-outline-dark">Edit</a>
+                      </div>
                   </div>
               </div>
         </div>
