--- a/templates/assignments.html
+++ b/templates/assignments.html
@@ -18,7 +18,7 @@
                     <div class="progress">
                         <div id="progressBar_{{ assignment.id }}" class="progress-bar progress-bar-striped" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <div class="text-right">
+                    <div class="text-right ml-auto">
                         <a href="{% url 'assignment_details' name=assignment.name %}" class="btn btn-link">See more</a>
                     </div>
                 </div>
