--- a/templates/reminder_details.html
+++ b/templates/reminder_details.html
@@ -16,8 +16,13 @@
                 <p class="card-text">Description of your reminder: {{ reminder.description }}</p>
                 <p class="card-text">Course:{{ reminder.course }}</p>
                 <p class="card-text">Deadline: {{ reminder.deadline }}</p>
-                  <div class="text-right">
-                      <a href="{% url 'delete_reminder' name=reminder.name %}" class="btn btn-danger">Delete</a>
+                  <div class="d-flex mt-3">
+                      <div class="text-left">
+                          <a href="{% url 'delete_reminder' name=reminder.name %}" class="btn btn-danger">Delete</a>
+                      </div>
+                      <div class="text-right ml-auto">
+                          <a href="{% url 'edit_reminder' reminder.name %}" class="btn btn-outline-dark">Edit</a>
+                      </div>
                   </div>
               </div>
         </div>
