--- a/templates/about.html
+++ b/templates/about.html
@@ -16,7 +16,7 @@
 
         <div class="row mb-4">
             <div class="col-md-6">
-                <div class="p-4 bg-light rounded">
+                <div class="p-4 bg-light rounded shadow">
                     <h2 class="mb-3" style="color: #4445A3">Our Mission</h2>
                     <p>
                         At Study Companion, we strive to create a comprehensive and user-friendly platform that simplifies
@@ -26,7 +26,7 @@
                 </div>
             </div>
             <div class="col-md-6">
-                <div class="p-4 bg-light rounded">
+                <div class="p-4 bg-light rounded shadow">
                     <h2 class="mb-3" style="color: #4445A3">Our Vision</h2>
                     <p>
                         Our vision is to revolutionize the way students approach their learning experience. We envision a
