--- a/templates/assignments.html
+++ b/templates/assignments.html
@@ -18,8 +18,8 @@
                     <div class="progress">
                         <div id="progressBar_{{ assignment.id }}" class="progress-bar progress-bar-striped" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <div class="text-right ml-auto">
-                        <a href="{% url 'assignment_details' name=assignment.name %}" class="btn btn-link">See more</a>
+                    <div class="text-right ml-auto mt-2">
+                        <a href="{% url 'assignment_details' name=assignment.name %}" class="btn btn-outline-success">See more</a>
                     </div>
                 </div>
             </div>
@@ -63,7 +63,10 @@
 
 
 
+    <div class="row text-center mx-auto" style="max-width: 300px">
+        <a href="{% url 'add_assignment_task' %}" class="btn btn-primary mx-5 px-4">Add New Assignment</a>
+    </div>
 
-    <a href="{% url 'add_assignment_task' %}" class="btn btn-primary mx-5 px-4">Add New Assignment</a>
+
 
 {% endblock %}
