--- a/templates/edit_assignment.html
+++ b/templates/edit_assignment.html
@@ -6,7 +6,7 @@
 
 {% block content %}
     <div class="container">
-    <a href="{% url 'assignments' %}" class="btn btn-outline-secondary">Go Back</a>
+    <a href="{% url 'assignment_details' name=assignment.name %}" class="btn btn-outline-secondary">Go Back</a>
         <h1 class="text-center primary-text my-5">Edit Assignment</h1>
         <form method="post" style="max-width: 400px" class="mx-auto">
             {% csrf_token %}
@@ -17,3 +17,5 @@
         </form>
     </div>
 {% endblock %}
+
+{#<a href="{% url 'assignment_details' name=assignment.name %}" class="btn btn-outline-success">See more</a>#}
