--- a/templates/base.html
+++ b/templates/base.html
@@ -80,7 +80,7 @@
     {% endblock %}
 </div>
 
-<footer class="navcolor text-white text-center py-4 mt-5">
+<footer class="navcolor text-white text-center py-4">
     <div class="container">
         <p>&copy; {{ year }} Study Companion. All rights reserved.</p>
         <p>Designed with <i class="fas fa-heart text-danger"></i> by Elena, Bojana and Iva</p>
