--- a/templates/login.html
+++ b/templates/login.html
@@ -14,7 +14,7 @@
                         <div class="form-outline mb-4">
                             <label class="form-label" for="form3Example3">Username</label>
                             <input type="text" id="form3Example3" name="username" class="form-control form-control-lg"
-                                   placeholder="Enter username"/>
+                                   placeholder="e.g. johndoe"/>
                         </div>
 
                         <!-- Password input -->
@@ -29,7 +29,7 @@
                                     style="padding-left: 2.5rem; padding-right: 2.5rem;">Login
                             </button>
                             <p class="fw-bold mt-2 pt-1 mb-0">Don't have an account? <a
-                                    href="{% url 'register' %}" class="link-danger">Register</a></p>
+                                    href="{% url 'register' %}" class="link-success">Register</a></p>
                         </div>
                     </form>
                 </div>
