--- a/templates/delete_reminder.html
+++ b/templates/delete_reminder.html
@@ -5,19 +5,22 @@
 {% endblock %}
 
 {% block content %}
+    {% if user.is_authenticated %}
 
-    <div class="container mt-4">
-        <h1 class="text-center primary-text">Delete Reminder</h1>
-        <div class="alert alert-danger mt-5 text-center mx-auto" role="alert" style="max-width: 600px">
-            Are you sure you want to delete the reminder "{{ reminder.name }}"?
-        </div>
-        <form method="post" class="mx-auto" style="max-width: 400px">
-            {% csrf_token %}
-            <div class="text-center">
-                <button type="submit" class="btn btn-danger">Delete</button>
-                <a href="{% url 'reminder_details' name=reminder.name %}" class="btn btn-secondary">Cancel</a>
+        <div class="container mt-4">
+            <h1 class="text-center primary-text">Delete Reminder</h1>
+            <div class="alert alert-danger mt-5 text-center mx-auto" role="alert" style="max-width: 600px">
+                Are you sure you want to delete the reminder "{{ reminder.name }}"?
             </div>
-        </form>
-    </div>
-
+            <form method="post" class="mx-auto" style="max-width: 400px">
+                {% csrf_token %}
+                <div class="text-center">
+                    <button type="submit" class="btn btn-danger">Delete</button>
+                    <a href="{% url 'reminder_details' name=reminder.name %}" class="btn btn-secondary">Cancel</a>
+                </div>
+            </form>
+        </div>
+    {% else %}
+        {% include "unauthenticated_message.html" %}
+    {% endif %}
 {% endblock %}
