--- a/templates/register.html
+++ b/templates/register.html
@@ -3,9 +3,9 @@
 {% block title %}Register{% endblock %}
 
 {% block content %}
-    <section class="vh-100">
-        <div class="container-fluid h-custom">
-            <div class="row d-flex justify-content-center align-items-center h-100">
+    <section>
+        <div class="container-fluid ">
+            <div class="row d-flex justify-content-center align-items-center">
                 <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
                     <h1 class="mb-3">Register</h1>
                     <form method="post">
@@ -14,14 +14,14 @@
                         <div class="form-outline mb-4">
                             <label class="form-label" for="id_username">Username</label>
                             <input type="text" id="id_username" name="username" class="form-control form-control-lg"
-                                   placeholder="Enter username" />
+                                   placeholder="e.g. johndoe" />
                         </div>
 
                         <!-- Email input -->
                         <div class="form-outline mb-4">
                             <label class="form-label" for="id_email">Email address</label>
                             <input type="email" id="id_email" name="email" class="form-control form-control-lg"
-                                   placeholder="Enter email address" />
+                                   placeholder="e.g. johndoe@email.com" />
                         </div>
 
                         <!-- Password input -->
@@ -42,19 +42,19 @@
                         <div class="form-outline mb-4">
                             <label class="form-label" for="id_name">Name</label>
                             <input type="text" id="id_name" name="name" class="form-control form-control-lg"
-                                   placeholder="Enter name" />
+                                   placeholder="e.g. John" />
                         </div>
 
                         <!-- Surname input -->
                         <div class="form-outline mb-4">
                             <label class="form-label" for="id_surname">Surname</label>
                             <input type="text" id="id_surname" name="surname" class="form-control form-control-lg"
-                                   placeholder="Enter surname" />
+                                   placeholder="e.g. Doe" />
                         </div>
 
                         <div class="text-center text-lg-start my-4 py-2">
                             <button type="submit" class="btn btn-primary btn-lg" style="padding-left: 2.5rem; padding-right: 2.5rem;">Register</button>
-                            <p class="fw-bold mt-2 pt-1 mb-0">Already have an account? <a href="{% url 'login' %}" class="link-danger">Login</a></p>
+                            <p class="fw-bold">Already have an account? <a href="{% url 'login' %}" class="link-info">Login</a></p>
                         </div>
                     </form>
                 </div>
