Added group study and ask question pages

--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,7 @@
                         <a class="nav-link" href="/assignments/">Assignments</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/group-study/">Group Study</a>
+                        <a class="nav-link" href="/group_study/">Group Study</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/reminders/">Reminders</a>
